--- a/ShopApp/Components/Pages/Products.razor
+++ b/ShopApp/Components/Pages/Products.razor
@@ -3,6 +3,7 @@
 @inject IToastService toastService
 @inject NavigationManager NavManager
 
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -13,12 +14,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link href="_content/Blazored.Toast/blazored-toast.css" rel="stylesheet" />
+
+    <style>
+
+
+        .input-element {
+            width: 300px;
+        }
+    </style>
 </head>
 <body>
     <br />
     <br />
     <br />
     <h2>Товары, доступные в нашем магазине</h2>
+
+    <div class="form-group">
+        <label for="search_product">Название товара:</label>
+        <input id="search_product" class="form-control input-element" @bind="@search_product" />
+    </div>
+    <button class="btn btn-primary" @onclick="FindProducts">Найти</button>
+    <br />
 
 
     @foreach (Item item in catalog.Items)
@@ -34,6 +50,7 @@
 
 @code {
     Catalog catalog = new Catalog();
+    string search_product = "";
 
     protected void GoToProduct(int id)
     {
@@ -42,9 +59,19 @@
 
     protected override void OnInitialized()
     {
-        
-        
-        catalog.Items = Catalog.GetItems();
+        FindProducts();
+    }
+
+    private void FindProducts()
+    {
+        if (search_product == "")
+        {
+            catalog.Items = Catalog.GetItems();
+        }
+        else
+        {
+            catalog.Items = Catalog.GetItems().Where(item => item.Name.Contains(search_product, StringComparison.OrdinalIgnoreCase)).ToList();
+        }
     }
 
     private void AddToCart(int id)
