--- a/ShopApp/wwwroot/app.css
+++ b/ShopApp/wwwroot/app.css
@@ -1,10 +1,14 @@
-.item-img {
+/*.item-img {
     width: 50px;
 }
 
 .item-img-big {
     width: 10px;
 }
+
+.input-element {
+    width: 200px;
+}*/
 
 
 h1:focus {
