--- a/ShopApp/Components/Pages/Cart.razor
+++ b/ShopApp/Components/Pages/Cart.razor
@@ -65,3 +65,13 @@
         cart = Catalog.GetItemsFromCart();
     }
 }
+
+<style>
+    .item-img {
+        width: 50px;
+    }
+
+    .item-img-big {
+        width: 50px;
+    }
+</style>
