--- a/ShopApp/Components/Pages/Orders.razor
+++ b/ShopApp/Components/Pages/Orders.razor
@@ -21,3 +21,13 @@
     Catalog catalog = new Catalog();
 
 }
+
+<style>
+    .item-img {
+        width: 50px;
+    }
+
+    .item-img-big {
+        width: 50px;
+    }
+</style>
