--- a/ShopApp/Components/ProductCard.razor
+++ b/ShopApp/Components/ProductCard.razor
@@ -49,3 +49,13 @@
         NavManager.NavigateTo($"/editproduct/{id}", true);
     }
 }
+
+<style>
+    .item-img {
+        width: 50px;
+    }
+
+    .item-img-big {
+        width: 50px;
+    }
+</style>
